chore: rebrand app to "Cube App" and remove trademark references

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Rubik's Cube Web App</title>
+    <title>Cube App</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/styles/main.css">
@@ -262,7 +262,7 @@
   "storageBucket": "puzzler-c6048.firebasestorage.app",
   "messagingSenderId": "1026414975386",
   "appId": "1:1026414975386:web:647d4086d2dd512ae20223"
-}`, null, "rubiks-cube-app");
+}`, null, "cube-app");
     </script>
 
     <script type="module" src="js/app.js?v=1"></script>
