--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 "firebase/auth": "./js/lib/firebase-auth.js",
                 "firebase/firestore": "./js/lib/firebase-firestore.js",
                 "three-mesh-bvh": "./js/lib/three-mesh-bvh.js",
-                "three-bvh-csg": "./js/lib/three-bvh-csg.js"
+                "three-bvh-csg": "./js/lib/three-bvh-csg.js",
+                "@capacitor/network": "./js/lib/capacitor-network/index.js",
+                "@capacitor/core": "./js/lib/capacitor-core/index.js"
             }
         }
     </script>
