feat: Relocate debug button creation to `ui.js` and hide the controls panel on native Capacitor platforms.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 
     <!-- Bottom Right: Controls Legend (Expands Upwards) -->
-    <div class="absolute bottom-4 right-4 z-20 pointer-events-none">
+    <div id="controls-panel-container" class="absolute bottom-4 right-4 z-20 pointer-events-none">
         <div class="panel-container right-aligned">
             <!-- Header (Always Visible Button) -->
             <div class="pointer-events-auto bg-gray-900/90 backdrop-blur-md rounded-lg border border-gray-700 shadow-xl p-3 cursor-pointer hover:bg-gray-800 transition flex items-center gap-2 collapsed"
@@ -274,7 +274,7 @@
 }`, null, "cube-app");
     </script>
 
-    <script type="module" src="js/app.js?v=1"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
