--- a/stl_admin.html
+++ b/stl_admin.html
@@ -152,6 +152,79 @@
 
             </div>
 
+            <!-- Cubie Cutter -->
+            <div class="bg-gray-900/50 p-4 rounded-lg border border-gray-700">
+                <h2 class="text-sm font-bold text-gray-400 uppercase mb-3">3. Cubie Cutter</h2>
+
+                <p class="text-xs text-gray-400 mb-3">Generate pre-cut cubie geometries for TheChildMod puzzle.</p>
+
+                <!-- Parameters -->
+                <div class="space-y-3 mb-4">
+                    <div>
+                        <label class="block text-xs text-gray-500 mb-1">Fillet Radius: <span
+                                id="cubie-filletRadius-val">0.14</span></label>
+                        <input type="range" id="cubie-filletRadius" min="0" max="0.5" step="0.01" value="0.14"
+                            class="w-full">
+                    </div>
+
+                    <div>
+                        <label class="block text-xs text-gray-500 mb-1">Outer Scale: <span
+                                id="cubie-outerScale-val">2.95</span></label>
+                        <input type="range" id="cubie-outerScale" min="1" max="5" step="0.05" value="2.95"
+                            class="w-full">
+                    </div>
+
+                    <div>
+                        <label class="block text-xs text-gray-500 mb-1">Rotation (deg): <span
+                                id="cubie-rotation-val">-45</span></label>
+                        <input type="range" id="cubie-rotation" min="-180" max="180" step="1" value="-45"
+                            class="w-full">
+                    </div>
+
+                    <div>
+                        <label class="block text-xs text-gray-500 mb-1">Scale: <span
+                                id="cubie-scale-val">3.35</span></label>
+                        <input type="range" id="cubie-scale" min="1" max="6" step="0.05" value="3.35" class="w-full">
+                    </div>
+
+                    <div class="grid grid-cols-3 gap-2">
+                        <div>
+                            <label class="block text-xs text-gray-500 mb-1">X: <span
+                                    id="cubie-offsetX-val">2.71</span></label>
+                            <input type="range" id="cubie-offsetX" min="-5" max="5" step="0.01" value="2.71"
+                                class="w-full">
+                        </div>
+                        <div>
+                            <label class="block text-xs text-gray-500 mb-1">Y: <span
+                                    id="cubie-offsetY-val">1.53</span></label>
+                            <input type="range" id="cubie-offsetY" min="-5" max="5" step="0.01" value="1.53"
+                                class="w-full">
+                        </div>
+                        <div>
+                            <label class="block text-xs text-gray-500 mb-1">Z: <span
+                                    id="cubie-offsetZ-val">-2.38</span></label>
+                            <input type="range" id="cubie-offsetZ" min="-5" max="5" step="0.01" value="-2.38"
+                                class="w-full">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Actions -->
+                <div class="space-y-2">
+                    <button id="btn-generate-cubies"
+                        class="w-full bg-blue-600 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded transition">
+                        ⚙️ Generate Cubies
+                    </button>
+                    <button id="btn-export-cubies"
+                        class="w-full bg-green-600 hover:bg-green-500 text-white font-bold py-2 px-4 rounded transition disabled:opacity-50 disabled:cursor-not-allowed"
+                        disabled>
+                        💾 Export All Cubies
+                    </button>
+                </div>
+
+                <p class="text-[10px] text-gray-400 mt-2 italic">This will generate 12 cubie files (2×3×2 grid)</p>
+            </div>
+
             <!-- Instructions -->
             <div class="text-xs text-gray-500">
                 <p class="mb-2"><strong>Controls:</strong></p>
