--- a/stl_manager.html
+++ b/stl_manager.html
@@ -173,10 +173,44 @@
                     </div>
                 </div>
 
-                <!-- 3. Painting -->
+                <!-- 3. Material -->
+                <div class="bg-gray-900/50 p-4 rounded-lg border border-gray-700">
+                    <h2 class="text-sm font-bold text-gray-400 uppercase mb-3">3. Material</h2>
+                    <div class="space-y-3">
+                        <div class="flex items-center justify-between">
+                            <label class="text-xs text-gray-500 w-24">Roughness:</label>
+                            <input type="number" id="val-roughness" value="0.6" step="0.01" min="0" max="1"
+                                class="w-16 bg-gray-800 border border-gray-600 rounded px-1 py-0.5 text-xs text-right">
+                        </div>
+                        <input type="range" id="inp-roughness" min="0" max="1" step="0.01" value="0.6" class="w-full">
+
+                        <div class="flex items-center justify-between">
+                            <label class="text-xs text-gray-500 w-24">Metalness:</label>
+                            <input type="number" id="val-metalness" value="0.0" step="0.01" min="0" max="1"
+                                class="w-16 bg-gray-800 border border-gray-600 rounded px-1 py-0.5 text-xs text-right">
+                        </div>
+                        <input type="range" id="inp-metalness" min="0" max="1" step="0.01" value="0.0" class="w-full">
+
+                        <div class="flex items-center justify-between">
+                            <label class="text-xs text-gray-500 w-24">Normal Scale:</label>
+                            <input type="number" id="val-normalScale" value="0.5" step="0.01" min="0" max="1"
+                                class="w-16 bg-gray-800 border border-gray-600 rounded px-1 py-0.5 text-xs text-right">
+                        </div>
+                        <input type="range" id="inp-normalScale" min="0" max="1" step="0.01" value="0.5" class="w-full">
+
+                        <div class="flex items-center gap-2 mt-2">
+                            <input type="checkbox" id="chk-sparkle"
+                                class="form-checkbox h-4 w-4 text-blue-600 transition duration-150 ease-in-out bg-gray-800 border-gray-600 rounded"
+                                checked>
+                            <label for="chk-sparkle" class="text-xs text-gray-500">Enable Sparkle Map</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 4. Painting -->
                 <div class="bg-gray-900/50 p-4 rounded-lg border border-gray-700">
                     <h2 class="text-sm font-bold text-gray-400 uppercase mb-3 flex justify-between items-center">
-                        3. Paint
+                        4. Paint
                         <button id="btn-import-colors" class="text-xs text-blue-400 hover:text-blue-300">Import
                             Colors</button>
                         <input type="file" id="file-input-colors" accept=".json" class="hidden">
@@ -240,7 +274,7 @@
 
                 <!-- 4. Cut Settings -->
                 <div class="bg-gray-900/50 p-4 rounded-lg border border-gray-700">
-                    <h2 class="text-sm font-bold text-gray-400 uppercase mb-3">4. Cut Settings</h2>
+                    <h2 class="text-sm font-bold text-gray-400 uppercase mb-3">5. Cut Settings</h2>
                     <div class="space-y-3">
                         <div>
                             <div class="flex items-center justify-between">
@@ -256,7 +290,7 @@
 
                 <!-- 5. Optimization (Generation) -->
                 <div class="bg-gray-900/50 p-4 rounded-lg border border-gray-700">
-                    <h2 class="text-sm font-bold text-gray-400 uppercase mb-3">5. Optimization</h2>
+                    <h2 class="text-sm font-bold text-gray-400 uppercase mb-3">6. Optimization</h2>
                     <p class="text-[10px] text-gray-500 mb-3">Generate pre-cut assets for instant loading and correct
                         inner colors.</p>
 
